src/objects/appsolutely__Error_Events__e.object
<CustomObject>
    <description>An event that is fired whenever a Company.info element triggers an error.</description>
    <fields>
        <fullName>appsolutely__Cause__c</fullName>
        <description>The cause of the error</description>
        <label>Cause</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Line_Number__c</fullName>
        <description>The line number the error occurred on.</description>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Message__c</fullName>
        <description>The message of the event</description>
        <label>Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if an email needs to be send out to the configured email address.</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appsolutely__Stacktrace__c</fullName>
        <description>The stacktrace of an exception to log</description>
        <label>Stacktrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Type__c</fullName>
        <description>The type of the error</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Event</label>
    <pluralLabel>Error Events</pluralLabel>
</CustomObject>